--- a/README
+++ b/README
@@ -5,6 +5,23 @@ NAME
 VERSION
     version 0.1.0
 
+SYNOPSIS
+    This module is the logical intersection of "ShareDir" and
+    "Bootstrap::lib" plug-ins.
+
+        [Bootstrap::lib]
+
+        [Bootstrap::ShareDir::Dist]
+        dir = share
+
+        [ShareDir]
+        dir = share
+
+    The only difference between this module and "ShareDir" is this module
+    exists to make "share" visible to plugins for the distribution being
+    built, while "ShareDir" exists to export the "share" directory visible
+    after install time.
+
 METHODS
   "do_bootstrap_sharedir"
     This is where all the real work is done, and its called via a little
