--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     on your dist during bootstrap
 
 VERSION
-    version 0.1.0
+    version 0.2.0
 
 SYNOPSIS
     This module is the logical intersection of "ShareDir" and
@@ -17,24 +17,32 @@ SYNOPSIS
         [ShareDir]
         dir = share
 
-    The only difference between this module and "ShareDir" is this module
-    exists to make "share" visible to plugins for the distribution being
-    built, while "ShareDir" exists to export the "share" directory visible
-    after install time.
+    The only significant difference between this module and "ShareDir" is
+    this module exists to make "share" visible to plugins for the
+    distribution being built, while "ShareDir" exists to export the "share"
+    directory visible after install time.
+
+    Additionally, there are two primary attributes that are provided by
+    "Dist::Zilla::Role::Bootstrap", See "ATTRIBUTES" in
+    Dist::Zilla::Role::Bootstrap
+
+    For instance, this bootstraps "ROOT/Your-Dist-Name-$VERSION/share" if it
+    exists and there's only one $VERSION, otherwise it falls back to simply
+    bootstrapping "ROOT/share"
+
+        [Bootstrap::ShareDir::Dist]
+        dir = share
+        try_built = 1
 
 METHODS
   "do_bootstrap_sharedir"
-    This is where all the real work is done, and its called via a little
-    glue around "plugin_from_config"
+    This is where all the real work is done.
+
+  "bootstrap"
+    Called by "Dist::Zilla::Role::Bootstrap"
 
 ATTRIBUTES
-  "distname"
-  "try_built"
-  "fallback"
   "dir"
-PRIVATE ATTRIBUTES
-  "_cwd"
-  "_bootstrap_root"
 AUTHOR
     Kent Fredric <kentfredric@gmail.com>
 
