--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Release history for Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
 
 {{$NEXT}}
+ [!Minor]
+ - Make immutable.
 
 0.2.0 2013-09-04T12:57:46Z
  [!Major]
