--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Release history for Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
 {{$NEXT}}
  [!Minor]
  - Make immutable.
+ - Tidy
 
 0.2.0 2013-09-04T12:57:46Z
  [!Major]
