--- a/Changes
+++ b/Changes
@@ -1,6 +1,14 @@
 Release history for Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
 
 {{$NEXT}}
+ [00 Major]
+ - Changes that may affect hand-operated downstreams.
+
+ [01 Version Scheme]
+ - Moved to x.yyyyyy
+ - This is the primary reason for the 1.x on the box.
+ - https://questhub.io/realm/perl/quest/5388d3a9bbd0be2224000129
+
  [Dependencies::Stats]
  - Dependencies changed since 0.3.0, see misc/*.deps* for details
  - build: ↑1
