--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 NAME
-    Dist::Zilla::Plugin::Bootstrap::ShareDir::Dist - Use a "share" directory
+    Dist::Zilla::Plugin::Bootstrap::ShareDir::Dist - Use a share directory
     on your dist during bootstrap
 
 VERSION
