--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 NAME
-    Dist::Zilla::Plugin::Bootstrap::ShareDir::Dist - Use a "share" directory
+    Dist::Zilla::Plugin::Bootstrap::ShareDir::Dist - Use a share directory
     on your dist during bootstrap
 
 VERSION
-    version 0.3.0
+    version 1.000000
 
 SYNOPSIS
     This module is the logical intersection of "ShareDir" and
@@ -47,7 +47,7 @@ AUTHOR
     Kent Fredric <kentfredric@gmail.com>
 
 COPYRIGHT AND LICENSE
-    This software is copyright (c) 2013 by Kent Fredric
+    This software is copyright (c) 2014 by Kent Fredric
     <kentfredric@gmail.com>.
 
     This is free software; you can redistribute it and/or modify it under
