--- a/Changes
+++ b/Changes
@@ -1,9 +1,16 @@
 Release history for Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
 
 {{$NEXT}}
+ [00 Trivial]
+ - no code change.
+ - whitespace adjustment.
+
  [Dependencies::Stats]
  - Dependencies changed since 1.000001, see misc/*.deps* for details
  - develop: +1 (suggests: ↑1)
+
+ [Misc]
+ - Improve source side POD to reduce build side whitespace.
 
 1.000001 2014-08-03T02:04:39Z
  [00 Tests]
