--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Release history for Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
 
 {{$NEXT}}
  [00 Trivial]
+ - CPANDAY!
  - no code change.
  - whitespace adjustment.
 
