--- a/Changes
+++ b/Changes
@@ -1,9 +1,16 @@
 Release history for Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
 
 {{$NEXT}}
+ [00 Minor]
+ - Tests refactored.
+
  [Dependencies::Stats]
  - Dependencies changed since 1.000002, see misc/*.deps* for details
  - develop: +1 ↑1 (suggests: ↑2)
+ - test: +1 -2
+
+ [Tests]
+ - Refactored in terms of DZPUtAKENTNL::dztest
 
 1.000002 2014-08-15T21:15:41Z
  [00 Trivial]
