--- a/README
+++ b/README
@@ -44,7 +44,7 @@ METHODS
 ATTRIBUTES
   "dir"
 AUTHOR
-    Kent Fredric <kentfredric@gmail.com>
+    Kent Fredric <kentnl@cpan.org>
 
 COPYRIGHT AND LICENSE
     This software is copyright (c) 2014 by Kent Fredric
