Set author=kentnl

--- a/Changes
+++ b/Changes
@@ -3,11 +3,15 @@ Release history for Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
 {{$NEXT}}
  [00 Minor]
  - Tests refactored.
+ - metadata
 
  [Dependencies::Stats]
  - Dependencies changed since 1.000002, see misc/*.deps* for details
  - develop: +1 ↑1 (suggests: ↑2)
  - test: +1 -2
+
+ [Metadata]
+ - set author = kentnl
 
  [Tests]
  - Refactored in terms of DZPUtAKENTNL::dztest
