--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     on your dist during bootstrap
 
 VERSION
-    version 1.000002
+    version 1.001000
 
 SYNOPSIS
     This module is the logical intersection of "ShareDir" and
@@ -44,7 +44,7 @@ METHODS
 ATTRIBUTES
   "dir"
 AUTHOR
-    Kent Fredric <kentfredric@gmail.com>
+    Kent Fredric <kentnl@cpan.org>
 
 COPYRIGHT AND LICENSE
     This software is copyright (c) 2014 by Kent Fredric
