--- a/Changes
+++ b/Changes
@@ -5,8 +5,11 @@ Release history for Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
  - Dependencies changed since 1.001000, see misc/*.deps* for details
  - configure: +1 (recommends: ↑1)
  - develop: +10 ↑2 -2 (recommends: +1, suggests: ↑2)
- - runtime: (recommends: +1)
+ - runtime: -1 (recommends: +1)
  - test: +1 (recommends: +1 ↑1 ↓1)
+
+ [Internals]
+ - Removed MooseX::AttributeShortcuts to remove indirect autobox dep.
 
 1.001000 2014-08-30T13:47:50Z
  [00 Minor]
