--- a/Changes
+++ b/Changes
@@ -8,6 +8,9 @@ Release history for Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
  - runtime: -1 (recommends: +1)
  - test: +1 (recommends: +1 ↑1 ↓1)
 
+ [Documentation]
+ - Improved DESCRIPTION section added for README.
+
  [Internals]
  - Removed MooseX::AttributeShortcuts to remove indirect autobox dep.
 
