--- a/Changes
+++ b/Changes
@@ -8,7 +8,11 @@ Release history for Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
  [Dependencies::Stats]
  - Dependencies changed since 1.001001, see misc/*.deps* for details
  - develop: +5 ↑4 -2 (suggests: ↑2)
+ - runtime: -1
  - test: ↓1
+
+ [Internals]
+ - Drop ConfigDumper
 
 1.001001 2015-01-20T22:33:27Z d97fa56
  [Dependencies::Stats]
